# wm_darknet

./: README.md
wm_darknet_msgs/: CMakeLists.txt  package.xml
wm_darknet_msgs/action/: CheckForObjects.action
wm_darknet_msgs/msg/: BoundingBox.msg
wm_darknet_ros/: CMakeLists.txt  package.xml
wm_darknet_ros/config/: ros.yaml
wm_darknet_ros/include/wm_darknet_ros/: YoloObjectDetector.h
wm_darknet_ros/launch/: darknet_ros.launch
wm_darknet_ros/src/: YoloObjectDetector.cpp  image_interface.c  object_detector_demo.cpp  yolo_object_detector_node.cpp
